# maya-dem-bones

./: CMakeLists.txt
modules/: FindMaya.cmake  FindMayaPython.cmake
src/: main.cpp  utils.h
